ci: split production Metal readback control by transfer stage