@@ -16,225 +16,240 @@ import java.util.HashSet;
 import java.util.Locale;
 import java.util.Set;
 
-/**
- * CI-only control probe for the production Metal texture -> shared-buffer path.
- *
- * <p>This class intentionally lives in the production renderer package so the
- * separate Client GameTest mod can exercise the exact package-private backend
- * objects without adding a test API to MetalUniversal itself. It is compiled
- * against, but is not packaged into, the production MetalUniversal JAR.</p>
- */
+/** CI-only control probes for MetalUniversal's production GPU readback path. */
 public final class MetalCiFramebufferProbe {
     private static final int WIDTH = 64;
     private static final int HEIGHT = 64;
+    private static final int PIXELS = WIDTH * HEIGHT;
+    private static final int BYTES = PIXELS * 4;
     private static final Vector4f EXPECTED_CLEAR = new Vector4f(1.0f, 0.0f, 1.0f, 1.0f);
 
     private MetalCiFramebufferProbe() {
     }
 
-    /**
-     * Creates a private RGBA8 Metal render target, clears it on the GPU to
-     * magenta, copies it with MetalCommandEncoder.copyTextureToBuffer(), waits
-     * for submitted GPU work, and inspects the CPU-visible shared MTLBuffer.
-     */
-    public static ProbeResult runKnownColorReadback(Path outputDirectory) {
+    public static ProbeSuite run(Path outputDirectory) {
         MetalDevice device = MetalDevice.current();
-        if (device == null) {
-            throw new IllegalStateException("MetalDevice.current() is null inside production Minecraft");
-        }
+        if (device == null) throw new IllegalStateException("MetalDevice.current() is null inside production Minecraft");
+        GpuFormat rgba8 = resolveRgba8Format();
+        device.waitForSubmittedGpuWork();
 
-        GpuFormat format = resolveRgba8Format();
-        int textureUsage = GpuTexture.USAGE_RENDER_ATTACHMENT | GpuTexture.USAGE_COPY_SRC;
-        MetalGpuTexture texture = (MetalGpuTexture) device.createTexture(
-                "CI known-color Metal readback control",
-                textureUsage,
-                format,
-                WIDTH,
-                HEIGHT,
-                1,
-                1
-        );
-        int byteCount = Math.multiplyExact(Math.multiplyExact(WIDTH, HEIGHT), texture.pixelSize());
-        MetalGpuBuffer readback = (MetalGpuBuffer) device.createBuffer(
-                () -> "CI known-color Metal readback control buffer",
-                GpuBuffer.USAGE_MAP_READ | GpuBuffer.USAGE_COPY_DST,
-                byteCount
-        );
+        ProbeResult bufferCopy = runBufferCopy(device, outputDirectory.resolve("01-buffer-copy"));
+        ProbeResult textureRoundTrip = runTextureRoundTrip(device, rgba8, outputDirectory.resolve("02-texture-roundtrip"));
+        ProbeResult renderClear = runRenderClear(device, rgba8, outputDirectory.resolve("03-render-clear"));
+        ProbeSuite suite = new ProbeSuite(bufferCopy, textureRoundTrip, renderClear);
+        writeSuite(outputDirectory, suite);
+        return suite;
+    }
 
+    private static ProbeResult runBufferCopy(MetalDevice device, Path output) {
+        MetalGpuBuffer source = (MetalGpuBuffer) device.createBuffer(
+                () -> "CI readback buffer-copy source", GpuBuffer.USAGE_MAP_WRITE | GpuBuffer.USAGE_COPY_SRC, BYTES);
+        MetalGpuBuffer destination = (MetalGpuBuffer) device.createBuffer(
+                () -> "CI readback buffer-copy destination",
+                GpuBuffer.USAGE_MAP_READ | GpuBuffer.USAGE_MAP_WRITE | GpuBuffer.USAGE_COPY_DST, BYTES);
         try {
-            MetalCommandEncoder encoder = device.commandEncoder();
-            // Drain any preceding Minecraft work first so the control starts at
-            // a clean submission boundary and cannot accidentally sample a
-            // renderer-owned encoder.
-            device.waitForSubmittedGpuWork();
+            byte[] expected = new byte[BYTES];
+            for (int i = 0; i < expected.length; i++) expected[i] = (byte) (0x31 + (i % 97));
+            write(source.currentStorage(), expected);
+            zero(destination.currentStorage(), BYTES);
 
-            encoder.clearColorTexture(texture, EXPECTED_CLEAR);
-            encoder.copyTextureToBuffer(texture, readback, 0L, () -> { }, 0);
+            MetalCommandEncoder encoder = device.commandEncoder();
+            encoder.blitCommandEncoder().copyFromBufferToBuffer(
+                    source.nativeHandle(), 0L, destination.nativeHandle(), 0L, BYTES);
             encoder.submit();
             device.waitForSubmittedGpuWork();
 
-            ByteBuffer mapped = readback.currentStorage();
-            mapped.position(0);
-            mapped.limit(byteCount);
-            byte[] bytes = new byte[byteCount];
-            mapped.get(bytes);
-
-            ProbeResult result = inspect(format, texture.pixelSize(), bytes);
-            writeEvidence(outputDirectory, result, bytes);
+            byte[] actual = read(destination.currentStorage(), BYTES);
+            ProbeResult result = inspect("buffer-copy", actual, expected);
+            writeResult(output, result, actual);
             return result;
         } finally {
-            readback.close();
-            texture.close();
+            source.close();
+            destination.close();
+            device.waitForSubmittedGpuWork();
         }
     }
 
-    private static ProbeResult inspect(GpuFormat format, int bytesPerPixel, byte[] bytes) {
-        long nonZeroBytes = 0L;
-        long nonBlackPixels = 0L;
-        long redSum = 0L;
-        long greenSum = 0L;
-        long blueSum = 0L;
-        long alphaSum = 0L;
-        Set<Integer> distinctRgb = new HashSet<>();
+    private static ProbeResult runTextureRoundTrip(MetalDevice device, GpuFormat format, Path output) {
+        MetalGpuBuffer source = (MetalGpuBuffer) device.createBuffer(
+                () -> "CI texture-roundtrip source", GpuBuffer.USAGE_MAP_WRITE | GpuBuffer.USAGE_COPY_SRC, BYTES);
+        MetalGpuBuffer destination = (MetalGpuBuffer) device.createBuffer(
+                () -> "CI texture-roundtrip destination",
+                GpuBuffer.USAGE_MAP_READ | GpuBuffer.USAGE_MAP_WRITE | GpuBuffer.USAGE_COPY_DST, BYTES);
+        MetalGpuTexture texture = (MetalGpuTexture) device.createTexture(
+                "CI texture-roundtrip private texture", GpuTexture.USAGE_COPY_DST | GpuTexture.USAGE_COPY_SRC,
+                format, WIDTH, HEIGHT, 1, 1);
+        try {
+            byte[] expected = rgbaPattern();
+            write(source.currentStorage(), expected);
+            zero(destination.currentStorage(), BYTES);
 
-        if (bytesPerPixel < 4 || bytes.length % bytesPerPixel != 0) {
-            throw new IllegalStateException(
-                    "Known-color control expected a four-byte-or-larger color format, got "
-                            + format + " blockSize=" + bytesPerPixel + " bytes=" + bytes.length
-            );
+            MetalCommandEncoder encoder = device.commandEncoder();
+            encoder.blitCommandEncoder().copyFromBufferToTexture(
+                    source.nativeHandle(), 0L, texture.nativeHandle(), 0L, 0L, 0L, 0L,
+                    WIDTH, HEIGHT, WIDTH * 4L, BYTES);
+            encoder.copyTextureToBuffer(texture, destination, 0L, () -> { }, 0);
+            encoder.submit();
+            device.waitForSubmittedGpuWork();
+
+            byte[] actual = read(destination.currentStorage(), BYTES);
+            ProbeResult result = inspect("texture-roundtrip", actual, expected);
+            writeResult(output, result, actual);
+            return result;
+        } finally {
+            source.close();
+            destination.close();
+            texture.close();
+            device.waitForSubmittedGpuWork();
         }
+    }
 
-        int pixels = bytes.length / bytesPerPixel;
-        for (int offset = 0; offset < bytes.length; offset += bytesPerPixel) {
-            int r = bytes[offset] & 0xff;
-            int g = bytes[offset + 1] & 0xff;
-            int b = bytes[offset + 2] & 0xff;
-            int a = bytes[offset + 3] & 0xff;
-            for (int component = 0; component < bytesPerPixel; component++) {
-                if (bytes[offset + component] != 0) nonZeroBytes++;
+    private static ProbeResult runRenderClear(MetalDevice device, GpuFormat format, Path output) {
+        MetalGpuTexture texture = (MetalGpuTexture) device.createTexture(
+                "CI render-clear private texture", GpuTexture.USAGE_RENDER_ATTACHMENT | GpuTexture.USAGE_COPY_SRC,
+                format, WIDTH, HEIGHT, 1, 1);
+        MetalGpuBuffer destination = (MetalGpuBuffer) device.createBuffer(
+                () -> "CI render-clear destination",
+                GpuBuffer.USAGE_MAP_READ | GpuBuffer.USAGE_MAP_WRITE | GpuBuffer.USAGE_COPY_DST, BYTES);
+        try {
+            zero(destination.currentStorage(), BYTES);
+            MetalCommandEncoder encoder = device.commandEncoder();
+            encoder.clearColorTexture(texture, EXPECTED_CLEAR);
+            encoder.copyTextureToBuffer(texture, destination, 0L, () -> { }, 0);
+            encoder.submit();
+            device.waitForSubmittedGpuWork();
+
+            byte[] actual = read(destination.currentStorage(), BYTES);
+            byte[] expected = new byte[BYTES];
+            for (int offset = 0; offset < expected.length; offset += 4) {
+                expected[offset] = (byte) 0xff;
+                expected[offset + 2] = (byte) 0xff;
+                expected[offset + 3] = (byte) 0xff;
             }
+            ProbeResult result = inspect("render-clear", actual, expected);
+            writeResult(output, result, actual);
+            return result;
+        } finally {
+            destination.close();
+            texture.close();
+            device.waitForSubmittedGpuWork();
+        }
+    }
+
+    private static byte[] rgbaPattern() {
+        byte[] bytes = new byte[BYTES];
+        for (int pixel = 0; pixel < PIXELS; pixel++) {
+            int offset = pixel * 4;
+            bytes[offset] = (byte) (32 + (pixel % 191));
+            bytes[offset + 1] = (byte) (17 + ((pixel * 3) % 211));
+            bytes[offset + 2] = (byte) (71 + ((pixel * 7) % 173));
+            bytes[offset + 3] = (byte) 0xff;
+        }
+        return bytes;
+    }
+
+    private static ProbeResult inspect(String name, byte[] actual, byte[] expected) {
+        long nonZeroBytes = 0L, mismatchBytes = 0L, nonBlackPixels = 0L;
+        long redSum = 0L, greenSum = 0L, blueSum = 0L, alphaSum = 0L;
+        Set<Integer> distinctRgb = new HashSet<>();
+        for (int i = 0; i < actual.length; i++) {
+            if (actual[i] != 0) nonZeroBytes++;
+            if (actual[i] != expected[i]) mismatchBytes++;
+        }
+        for (int offset = 0; offset < actual.length; offset += 4) {
+            int r = actual[offset] & 0xff;
+            int g = actual[offset + 1] & 0xff;
+            int b = actual[offset + 2] & 0xff;
+            int a = actual[offset + 3] & 0xff;
             if (r > 4 || g > 4 || b > 4) nonBlackPixels++;
             if (distinctRgb.size() < 8192) distinctRgb.add((r << 16) | (g << 8) | b);
-            redSum += r;
-            greenSum += g;
-            blueSum += b;
-            alphaSum += a;
+            redSum += r; greenSum += g; blueSum += b; alphaSum += a;
         }
+        return new ProbeResult(name, actual.length, nonZeroBytes, mismatchBytes, nonBlackPixels, distinctRgb.size(),
+                redSum / (double) PIXELS, greenSum / (double) PIXELS,
+                blueSum / (double) PIXELS, alphaSum / (double) PIXELS);
+    }
 
-        return new ProbeResult(
-                format.toString(),
-                WIDTH,
-                HEIGHT,
-                bytesPerPixel,
-                bytes.length,
-                nonZeroBytes,
-                nonBlackPixels,
-                distinctRgb.size(),
-                redSum / (double) pixels,
-                greenSum / (double) pixels,
-                blueSum / (double) pixels,
-                alphaSum / (double) pixels
-        );
+    private static void write(ByteBuffer storage, byte[] bytes) {
+        ByteBuffer buffer = storage.duplicate();
+        buffer.position(0).limit(bytes.length);
+        buffer.put(bytes);
+    }
+
+    private static void zero(ByteBuffer storage, int length) {
+        ByteBuffer buffer = storage.duplicate();
+        buffer.position(0).limit(length);
+        while (buffer.remaining() >= Long.BYTES) buffer.putLong(0L);
+        while (buffer.hasRemaining()) buffer.put((byte) 0);
+    }
+
+    private static byte[] read(ByteBuffer storage, int length) {
+        ByteBuffer buffer = storage.duplicate();
+        buffer.position(0).limit(length);
+        byte[] bytes = new byte[length];
+        buffer.get(bytes);
+        return bytes;
     }
 
     private static GpuFormat resolveRgba8Format() {
-        for (String className : new String[]{
-                "com.mojang.blaze3d.GpuFormats",
-                "com.mojang.blaze3d.GpuFormat"
-        }) {
+        for (String className : new String[]{"com.mojang.blaze3d.GpuFormats", "com.mojang.blaze3d.GpuFormat"}) {
             try {
                 Class<?> owner = Class.forName(className);
                 for (Field field : owner.getDeclaredFields()) {
-                    if (!Modifier.isStatic(field.getModifiers())
-                            || !GpuFormat.class.isAssignableFrom(field.getType())) {
-                        continue;
-                    }
+                    if (!Modifier.isStatic(field.getModifiers()) || !GpuFormat.class.isAssignableFrom(field.getType())) continue;
                     field.setAccessible(true);
                     Object value = field.get(null);
                     if (!(value instanceof GpuFormat format)) continue;
                     String identity = (field.getName() + " " + format).toUpperCase(Locale.ROOT);
-                    if (identity.contains("RGBA8")
-                            && !identity.contains("SRGB")
-                            && !identity.contains("SNORM")
-                            && !identity.contains("UINT")
-                            && !identity.contains("SINT")) {
-                        return format;
-                    }
+                    if (identity.contains("RGBA8") && !identity.contains("SRGB") && !identity.contains("SNORM")
+                            && !identity.contains("UINT") && !identity.contains("SINT")) return format;
                 }
             } catch (ClassNotFoundException ignored) {
-                // Try the next holder used by this Minecraft revision.
             } catch (ReflectiveOperationException exception) {
                 throw new IllegalStateException("Could not inspect Minecraft GPU formats", exception);
             }
         }
-        throw new IllegalStateException("Could not resolve Minecraft's RGBA8 UNORM GpuFormat");
+        throw new IllegalStateException("Could not resolve Minecraft RGBA8 UNORM GpuFormat");
     }
 
-    private static void writeEvidence(Path directory, ProbeResult result, byte[] bytes) {
+    private static void writeResult(Path directory, ProbeResult result, byte[] actual) {
         try {
             Files.createDirectories(directory);
-            Files.write(directory.resolve("known-color.raw"), bytes);
-            String json = """
-                    {
-                      "schema": 1,
-                      "format": "%s",
-                      "width": %d,
-                      "height": %d,
-                      "bytesPerPixel": %d,
-                      "byteCount": %d,
-                      "nonZeroBytes": %d,
-                      "nonBlackPixels": %d,
-                      "distinctRgb": %d,
-                      "meanRed": %.6f,
-                      "meanGreen": %.6f,
-                      "meanBlue": %.6f,
-                      "meanAlpha": %.6f
-                    }
-                    """.formatted(
-                    escape(result.format()),
-                    result.width(),
-                    result.height(),
-                    result.bytesPerPixel(),
-                    result.byteCount(),
-                    result.nonZeroBytes(),
-                    result.nonBlackPixels(),
-                    result.distinctRgb(),
-                    result.meanRed(),
-                    result.meanGreen(),
-                    result.meanBlue(),
-                    result.meanAlpha()
-            );
-            Files.writeString(directory.resolve("known-color.json"), json, StandardCharsets.UTF_8);
+            Files.write(directory.resolve("actual.raw"), actual);
+            Files.writeString(directory.resolve("result.json"), result.toJson(), StandardCharsets.UTF_8);
         } catch (IOException exception) {
-            throw new IllegalStateException("Could not write known-color Metal probe evidence", exception);
+            throw new IllegalStateException("Could not write Metal control probe evidence", exception);
         }
     }
 
-    private static String escape(String value) {
-        return value.replace("\\", "\\\\").replace("\"", "\\\"");
+    private static void writeSuite(Path directory, ProbeSuite suite) {
+        try {
+            Files.createDirectories(directory);
+            Files.writeString(directory.resolve("suite.json"), suite.toJson(), StandardCharsets.UTF_8);
+        } catch (IOException exception) {
+            throw new IllegalStateException("Could not write Metal control suite evidence", exception);
+        }
     }
 
-    public record ProbeResult(
-            String format,
-            int width,
-            int height,
-            int bytesPerPixel,
-            int byteCount,
-            long nonZeroBytes,
-            long nonBlackPixels,
-            int distinctRgb,
-            double meanRed,
-            double meanGreen,
-            double meanBlue,
-            double meanAlpha
-    ) {
-        public boolean looksLikeMagentaClear() {
-            return nonZeroBytes > 0
-                    && nonBlackPixels == (long) width * height
-                    && meanRed > 200.0
-                    && meanGreen < 32.0
-                    && meanBlue > 200.0
-                    && meanAlpha > 200.0;
+    public record ProbeResult(String name, long byteCount, long nonZeroBytes, long mismatchBytes,
+                              long nonBlackPixels, int distinctRgb,
+                              double meanRed, double meanGreen, double meanBlue, double meanAlpha) {
+        public boolean exact() { return mismatchBytes == 0L; }
+        String toJson() {
+            return """
+                    {"name":"%s","byteCount":%d,"nonZeroBytes":%d,"mismatchBytes":%d,"nonBlackPixels":%d,"distinctRgb":%d,"meanRed":%.6f,"meanGreen":%.6f,"meanBlue":%.6f,"meanAlpha":%.6f,"exact":%s}
+                    """.formatted(name, byteCount, nonZeroBytes, mismatchBytes, nonBlackPixels, distinctRgb,
+                    meanRed, meanGreen, meanBlue, meanAlpha, exact());
+        }
+    }
+
+    public record ProbeSuite(ProbeResult bufferCopy, ProbeResult textureRoundTrip, ProbeResult renderClear) {
+        public boolean allExact() { return bufferCopy.exact() && textureRoundTrip.exact() && renderClear.exact(); }
+        String toJson() {
+            return "{\n  \"bufferCopy\": " + bufferCopy.toJson().trim()
+                    + ",\n  \"textureRoundTrip\": " + textureRoundTrip.toJson().trim()
+                    + ",\n  \"renderClear\": " + renderClear.toJson().trim()
+                    + ",\n  \"allExact\": " + allExact() + "\n}\n";
         }
     }
 }
